# POMFinder

./: POMFinder.ipynb  README.md  pyproject.toml  setup.py
Experimental_Data/: DanMAX_AlphaKeggin.gr
POMFinder/: cli.py
POMFinder.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
POMFinder/Backend/: POMFinder_443structures_100Dataset_per_Structure_xPDF_hypercube_sampling_Grmax_Name.h5
POMFinder/Backend/COD_ICSD_XYZs_POMs_unique99/: 2213065_0_1.0rscale.xyz  (+107 more)
POMFinder/Experimental_Data/: AMWH2O.gr
src/: cli.py
src/COD_ICSD_XYZs_POMs_unique99/: 2018792_1_0.9rscale.xyz  2100052_0_1.0rscale.xyz  2104477_0_1.1rscale.xyz  2104634_0_1.0rscale.xyz  2203989_1_0.9rscale.xyz  2217558_1_0.9rscale.xyz  2220478_1_0.9rscale.xyz  2226169_0_1.0rscale.xyz  4075111_0_0.9rscale.xyz  4077983_0_0.9rscale.xyz  4077983_0_1.0rscale.xyz  4078139_0_1.0rscale.xyz  4078273_0_1.1rscale.xyz  4081325_1_0.9rscale.xyz  4081467_0_1.1rscale.xyz  4084609_0_1.1rscale.xyz  4085078_0_1.1rscale.xyz  4100879_0_1.0rscale.xyz  4117179_0_1.1rscale.xyz  4117192_0_1.1rscale.xyz  4117761_0_1.0rscale.xyz  4117761_0_1.1rscale.xyz  4119329_0_0.9rscale.xyz  4119949_0_1.0rscale.xyz  4119949_0_1.1rscale.xyz  4122583_0_1.1rscale.xyz  4122862_0_1.0rscale.xyz  4335489_0_1.0rscale.xyz  4335489_0_1.1rscale.xyz  4342730_0_1.0rscale.xyz  4510633_0_0.9rscale.xyz  7001512_0_1.0rscale.xyz  7003870_0_1.0rscale.xyz  7003870_0_1.1rscale.xyz  7012782_0_1.1rscale.xyz  7012782_1_1.0rscale.xyz  7014652_0_1.0rscale.xyz  7015040_0_1.0rscale.xyz  7018031_0_1.1rscale.xyz  7020299_0_1.0rscale.xyz  (+159 more)
