[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "POMFinder"
version = "1.0.1"
authors = [
  { name="AndySAnker", email="ankerandy@gmail.com" },
]
description = "POMFinder is a tree-based supervised learning algorithm which can predict the polyoxometalate cluster from a Pair Distribution Function."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/AndySAnker/POMFinder"
"Bug Tracker" = "https://github.com/AndySAnker/POMFinder/issues"
